# llvm-tensor-opt

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  MatrixMultiply.cpp  TensorBenchmark.cpp  TensorOptTool.cpp
include/Analysis/: TensorAccessPatternAnalysis.h  TensorDataFlowAnalysis.h  TensorOperationRegistry.h  TensorOperations.h
include/AutoTuning/: AutoTuner.h  CostModel.h  DenseMapInfo.h  Profiler.h
include/CUDA/: CUDAOffloader.h  TensorKernels.h
include/MLIR/: MLIRTensorToLLVM.h  TensorDialect.h  TensorOps.h  TensorOps.td
include/Transforms/: TensorFusion.h  TensorParallelization.h  TensorVectorization.h
pytorch_ext/: example.py  llvm_tensor_opt_pytorch.cpp  setup.py  tensor_compiler.cpp  tensor_compiler.h  tensor_jit.cpp  tensor_jit.h
src/: CMakeLists.txt
src/Analysis/: CMakeLists.txt  TensorAccessPatternAnalysis.cpp  TensorDataFlowAnalysis.cpp  TensorOperationRegistry.cpp  TensorOperations.cpp
src/AutoTuning/: AutoTuner.cpp  CMakeLists.txt  CostModel.cpp  Profiler.cpp
src/CUDA/: CMakeLists.txt  CUDAOffloader.cpp  TensorKernels.cu
src/MLIR/: CMakeLists.txt  MLIRTensorToLLVM.cpp  TensorDialect.cpp  TensorOps.cpp
src/Transforms/: CMakeLists.txt  TensorFusion.cpp  TensorParallelization.cpp  TensorVectorization.cpp
test/: AnalysisTest.cpp  CMakeLists.txt  IntegrationTest.cpp  TransformsTest.cpp
